--- a/debian/rules
+++ b/debian/rules
@@ -34,10 +34,10 @@ else
 	CFLAGS += -O3
 endif
 
-ifeq (,$(filter stage1,$(DEB_BUILD_PROFILES)))
+ifeq (,$(filter nobiarch,$(DEB_BUILD_PROFILES)))
 
 32-ARCHS=amd64 ppc64 kfreebsd-amd64 s390x
-64-ARCHS=s390 sparc i386 powerpc mips mipsel
+64-ARCHS=s390 sparc i386 powerpc mips mipsel mipsn32 mipsn32el mipsr6 mipsr6el mipsn32r6 mipsn32r6el x32
 
 ifneq (,$(findstring $(DEB_HOST_ARCH), $(32-ARCHS)))
 EXTRA_INSTALL=install32
@@ -56,7 +56,7 @@ ifneq (,$(findstring $(DEB_HOST_ARCH), $(64-ARCHS)))
 EXTRA_INSTALL=install64
 EXTRA_BUILD=build64-stamp
 # MIPS doesn't use -m64
-ifneq (,$(findstring $(DEB_HOST_ARCH), mips mipsel))
+ifneq (,$(findstring $(DEB_HOST_ARCH), mips mipsel mipsn32 mipsn32el mipsr6 mipsr6el mipsn32r6 mipsn32r6el))
 m64=-mabi=64
 else
 m64=-m64
@@ -71,7 +71,7 @@ EXTRA_BUILD+=buildn32-stamp
 mn32=-mabi=n32
 endif
 
-endif # !stage1
+endif # !nobiarch
 
 UNALIGNED_ARCHS=i386 amd64 kfreebsd-i386 kfreebsd-amd64 hurd-i386 lpia
 ifneq (,$(findstring $(DEB_HOST_ARCH), $(UNALIGNED_ARCHS)))
@@ -187,18 +187,18 @@ binary-indep: build install
 binary-arch: build install $(EXTRA_INSTALL)
 	dh_testdir
 	dh_testroot
-	dh_installchangelogs -s ChangeLog
-	dh_installdocs -s
-	dh_installexamples -s
-	dh_install -s --sourcedir=debian/tmp
-	dh_installman -s
-	dh_lintian -s
-	dh_link -s
-	dh_strip -s --dbg-package=zlib1g-dbg
-	dh_compress -s
-	dh_fixperms -s
+	dh_installchangelogs -a ChangeLog
+	dh_installdocs -a
+	dh_installexamples -a
+	dh_install -a --sourcedir=debian/tmp
+	dh_installman -a
+	dh_lintian -a
+	dh_link -a
+	dh_strip -a --dbgsym-migration="zlib1g-dbg (<< 1:1.2.11.dfsg-2~)"
+	dh_compress -a
+	dh_fixperms -a
 	dh_makeshlibs -pzlib1g -V"zlib1g (>= 1:1.2.3.3.dfsg-1)" --add-udeb=zlib1g-udeb
-ifeq (,$(filter stage1,$(DEB_BUILD_PROFILES)))
+ifeq (,$(filter nobiarch,$(DEB_BUILD_PROFILES)))
 ifneq (,$(findstring $(DEB_HOST_ARCH), $(32-ARCHS)))
 	dh_makeshlibs -plib32z1 -V"lib32z1 (>= 1:1.2.3.3.dfsg-1)"
 endif
@@ -209,11 +209,11 @@ ifneq (,$(findstring $(DEB_HOST_ARCH), $(N32-ARCHS)))
 	dh_makeshlibs -plibn32z1 -V"libn32z1 (>= 1:1.2.3.3.dfsg-1)"
 endif
 endif
-	dh_installdeb -s
-	dh_shlibdeps -s
-	dh_gencontrol -s
-	dh_md5sums -s
-	dh_builddeb -s
+	dh_installdeb -a
+	dh_shlibdeps -a
+	dh_gencontrol -a
+	dh_md5sums -a
+	dh_builddeb -a
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install install64 install32
